Green test: shouldAddDocumentToIndexWhenNviCandidateExistsInResourcesStorage